Use custom <div> with padding instead of overriding the background-color

--- a/examples/overlay.css
+++ b/examples/overlay.css
@@ -12,3 +12,10 @@ div[contenteditable] {
     left: 0;
     z-index: 250;
 }
+
+.halloBackground {
+    position: absolute;
+    background-color: #fff;
+    z-index: 300;
+}
+
