--- a/examples/image.css
+++ b/examples/image.css
@@ -26,11 +26,18 @@
     width: 100%;
 }
 
+#activitySpinner {
+    display: none;
+    width: auto;
+    height: 20px;
+    margin: 0 auto;
+    font-size: 10px;
+}
+
 .halloimage-dialog .tabs li {
     display: table-cell;
     cursor: pointer;
-    background: #01add2 url('/bundles/liipvie/img/divider.png') no-repeat right;
-    padding: 3px 6px 0 5px;
+    background: #01add2 url('images/divider.png') no-repeat right;
     text-align: center;
 }
 
@@ -38,10 +45,19 @@
     background-color: #2EA0BE;
 }
 
-.halloimage-dialog .tabs li img {
+.halloimage-dialog .tabs li.halloimage-tabselector span {
     position: relative;
-    top: 2px;
+    padding: 4px 6px 0 18px;
     margin-right: 1px;
+}
+.halloimage-dialog .tabs li.halloimage-tab-suggestions span {
+    background: url('images/tabicon_suggestions.png') no-repeat left;
+}
+.halloimage-dialog .tabs li.halloimage-tab-search span {
+    background: url('images/tabicon_search.png') no-repeat left;
+}
+.halloimage-dialog .tabs li.halloimage-tab-upload span {
+    background: url('images/tabicon_upload.png') no-repeat left;
 }
 
 .halloimage-dialog .tabs li:last-of-type {
@@ -56,6 +72,10 @@
 .halloimage-dialog .tab-activeIndicator {
     vertical-align: top;
     margin-left: 50px;
+    width: 18px;
+    height: 8px;
+    display: relative;
+    background: url('images/arrow.png');
 }
 
 
@@ -82,6 +102,15 @@
     border: 1px solid #E1E1E1;
     box-shadow: 2px 2px 3px #888;
     cursor: pointer;
+    float: left;
+}
+
+.imageThumbnailContainer li {
+    display: block;
+    float: left;
+    width: 60px;
+    height: 50px;
+    margin-bottom: 13px;
 }
 
 .halloimage-dialog .imageThumbnail:hover {
@@ -122,16 +151,16 @@
 }
 
 .halloimage-dialog .rotationWrapper:hover {
-    -moz-transition-duration: 0.3s;
-    -webkit-transition-duration: 0.3s;
-    -moz-transform: translateX(-20px) rotate(-6deg);
-    -webkit-transform: translateX(-20px) rotate(-6deg);
-    transform: translateX(-20px) rotate(-6deg);
+    -moz-transition-duration: 0.2s;
+    -webkit-transition-duration: 0.2s;
+    -moz-transform: translateX(-20px) rotate(-3deg);
+    -webkit-transform: translateX(-20px) rotate(-3deg);
+    transform: translateX(-20px) rotate(-3deg);
     cursor: move;
 }
 
 .halloimage-dialog .rotationWrapper .hintArrow {
-    background: transparent url('/bundles/liipvie/img/drop_left.png') no-repeat -2px -2px;
+    background: transparent url('images/drop_left.png') no-repeat -2px -2px;
     height: 44px;
     width: 44px;
     position: absolute;
@@ -144,9 +173,9 @@
 }
 
 .halloimage-dialog .activeImageBg {
-    -moz-transform: rotate(-3deg);
+    /*-moz-transform: rotate(-3deg);
     -webkit-transform: rotate(-3deg);
-    transform: rotate(-3deg);
+    transform: rotate(-3deg);*/
     opacity: 0.2;
     position: absolute;
     left: 0;
@@ -189,12 +218,12 @@
 }
 
 .halloimage-dialog .pager-prev {
-    background: url('/bundles/liipvie/img/pager_arrows.png') no-repeat -5px 0;
+    background: url('images/pager_arrows.png') no-repeat -5px 0;
     left: 0;
 }
 
 .halloimage-dialog .pager-next {
-    background: url('/bundles/liipvie/img/pager_arrows.png') no-repeat -21px 0;
+    background: url('images/pager_arrows.png') no-repeat -21px 0;
     right: 0;
 }
 .halloimage-dialog .pager-prev:hover { background-position: -5px -22px; }
@@ -215,6 +244,14 @@
 .halloimage-dialog .tab-search .searchResults {
     margin: 15px 0 0 0;
     position: relative;
+}
+
+.halloimage-dialog .tab-upload {
+
+}
+.halloimage-dialog .tab-upload .file {
+    font-size: 11px;
+    margin-bottom: 10px;
 }
 
 .halloimage-dialog .imageThumbnailContainer {
