Started a new block-level formatting widget

--- a/examples/hallo.css
+++ b/examples/hallo.css
@@ -25,6 +25,15 @@ div.hallotoolbar {
     padding: 1px;
 }
 
+.dropdown-target {
+    width: "200px";
+    background-color: #eeeeec;
+}
+
+.dropdown-target .selected {
+    background-color: #729fcf;
+}
+
 .bigOverlay, .smallOverlay {
     display: none;
     position: absolute;
