Better positioning for dropdowns

--- a/examples/hallo.css
+++ b/examples/hallo.css
@@ -25,7 +25,7 @@ div.hallotoolbar {
     padding: 1px;
 }
 
-.dropdown-target {
+.dropdown-menu {
     width: "200px";
     background-color: #eeeeec;
 }
