--- a/examples/fontawesome/css/font-awesome.css
+++ b/examples/fontawesome/css/font-awesome.css
@@ -24,7 +24,7 @@
 @font-face {
   font-family: 'FontAwesome';
   src: url('../font/fontawesome-webfont.eot');
-  src: url('/stylesheets/fonts/../font/fontawesome-webfont.eot?#iefix') format('eot'), url('/stylesheets/fonts/../font/fontawesome-webfont.woff') format('woff'), url('/stylesheets/fonts/../font/fontawesome-webfont.ttf') format('truetype'), url('/stylesheets/fonts/../font/fontawesome-webfont.otf') format('opentype'), url('/stylesheets/fonts/../font/fontawesome-webfont.svg#FontAwesome') format('svg');
+  src: url('../font/fontawesome-webfont.eot?#iefix') format('eot'), url('../font/fontawesome-webfont.woff') format('woff'), url('../font/fontawesome-webfont.ttf') format('truetype'), url('../font/fontawesome-webfont.otf') format('opentype'), url('../font/fontawesome-webfont.svg#FontAwesome') format('svg');
   font-weight: normal;
   font-style: normal;
 }
