--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,3 @@
     <header>
-      <a href="https://github.com/bergie/hallo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="./img/fork-me.png" alt="Fork me on GitHub"></a>
+      <a href="https://github.com/bergie/hallo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="/img/fork-me.png" alt="Fork me on GitHub"></a>
     </header>
