Update demo setup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,9 @@
     <link href="/css/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/hallo.css" />
     <link type="text/css" href="/css/jquery-ui-bootstrap/jquery-ui-1.8.16.custom.css" rel="stylesheet" />
-    <script type="text/javascript" src="/js/jquery-1.7.1.min.js"></script>
-    <script type="text/javascript" src="/js/jquery-ui-1.8.18.custom.min.js"></script>
+    <script type="text/javascript" src="/js/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="/js/jquery-ui-1.10.0.custom.min.js"></script>
+    <script type="text/javascript" src="/js/rangy-core-1.2.3.js"></script>
     <script type="text/javascript" src="/js/hallo.js"></script>
     {% for js in page.includes_js %}
     <script src="{{ js }}"></script>
