--- a/examples/image-edit.css
+++ b/examples/image-edit.css
@@ -31,3 +31,12 @@
 #hallo-image-browser-paging a {
     padding-right: 10px;
 }
+
+#hallo-image-upload-container {
+    width: 300px;
+    height: 300px;
+    background-color: #049cdb;
+    color: white;
+    padding: 30px;
+}
+
