--- a/examples/image-edit.css
+++ b/examples/image-edit.css
@@ -32,7 +32,7 @@
     padding-right: 10px;
 }
 
-#hallo-image-upload-container {
+.hallo-image-upload-container {
     width: 300px;
     height: 300px;
     background-color: #049cdb;
